Move new campaign button to the left to avoid overlap with spinner

--- a/src/components/campaign-configuration/CampaignConfiguration.css
+++ b/src/components/campaign-configuration/CampaignConfiguration.css
@@ -1,5 +1,5 @@
 button[data-test="list-action-bar"] {
     position: absolute;
     top: 90px;
-    right: 220px;
+    right: 250px;
 }
